...

@Composable
fun SearchInputBar(
    keyword: String,
    onKeywordChange: (String) -> Unit,
    modifier: Modifier = Modifier,
    placeholder: String = "搜索",
    onSearch: ((String) -> Unit)? = null
) {
    val focusManager = LocalFocusManager.current
    val shape = RoundedCornerShape(30.dp)
    val submitSearch = {
        onSearch?.invoke(keyword)
...
